[ML] Fixing title overflow in modals when job id is too long (#3518)

--- a/plugins/ml/public/jobs/jobs_list/delete_job_modal/styles/main.less
+++ b/plugins/ml/public/jobs/jobs_list/delete_job_modal/styles/main.less
@@ -4,6 +4,8 @@
 
   h3 {
     margin-top: 0px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .status-item-list {
