--- a/plugins/ml/public/jobs/jobs_list/edit_job_modal/styles/main.less
+++ b/plugins/ml/public/jobs/jobs_list/edit_job_modal/styles/main.less
@@ -1,7 +1,9 @@
 .edit-job-modal {
   padding:20px;
   h3 {
- 		margin-top: 0px;
+    margin-top: 0px;
+    overflow: hidden;
+    text-overflow: ellipsis;
  	}
 
   .tab_contents{
